Code Refactore & Enhancements